# fast_append_array

./: README.md  pyproject.toml  tox.ini
fast_append_array/: __init__.py  fast_append_array.py
tests/fast_append_array/: test_fast_append_array.py  test_fast_append_array_view.py  test_numpy_performance.py  test_performance.py  test_performance_access.py  test_performance_append.py
