[tool.poetry]
name = "fast_append_array"
version = "0.2.0"
description = "A dataframe which supports blazing fast append operations and column access by name."
authors = ["Marius Helf <helfsmarius@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mariushelf/fast_append_array"
repository = "https://github.com/mariushelf/fast_append_array"
documentation = "https://github.com/mariushelf/fast_append_array"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"
pandas = {version="^1.0.0", extras=["pandas"]}

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pre-commit = "^2.8"
tox = "^3.20.1"
twine = "^3.2.0"
pytest-benchmark = "^3.2.3"
supertimer = "^0.4.0"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
markers = [
    "thirdparty: tests for 3rdparty libraries (deselect with '-m \"not thirdparty\"')",
]
